Bug 441299 - "Sources" combobox disappears after selecting another option from it
Summary: "Sources" combobox disappears after selecting another option from it
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: discover (other bugs)
Version First Reported In: 5.25.90
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Dan Leinir Turthra Jensen
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-08-21 14:13 UTC by Patrick Silva
Modified: 2022-09-28 16:39 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.26
Sentry Crash Report:


Attachments
screen recording (804.79 KB, video/webm)
2021-08-21 14:13 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2021-08-21 14:13:26 UTC
Created attachment 140915 [details]
screen recording

SUMMARY
I can't reproduce this bug consistently.
Sometimes "Sources" combobox disappears when I select another option from it,
as we can see in the attached screen recording.
On Arch Linux I can reproduce in the description pages of Audacity, Asunder CD ripper, filezilla
and wire-desktop apps.

STEPS TO REPRODUCE
1. open the description pages of apps available from two sources
2. open "Sources" combobox and select another source
3. 

EXPECTED RESULT
"Sources" combobox should remain visible after selecting another source

SOFTWARE/OS VERSIONS
Operating System: Arch Linux
KDE Plasma Version: 5.22.4
KDE Frameworks Version: 5.85.0
Qt Version: 5.15.2
Graphics Platform: Wayland
Comment 1 Nate Graham 2021-08-23 19:37:44 UTC
Cannot reproduce at all. :/ I hate bugs like that.
Comment 2 Patrick Silva 2022-05-19 23:52:42 UTC
it's still reproducible with Asunder CD ripper, filezilla and wire-desktop apps.

Operating System: Arch Linux
KDE Plasma Version: 5.24.90
KDE Frameworks Version: 5.94.0
Qt Version: 5.15.4
Graphics Platform: Wayland
Comment 3 Patrick Silva 2022-09-16 15:46:57 UTC
Can reproduce with Filezilla.

Operating System: Arch Linux
KDE Plasma Version: 5.25.90
KDE Frameworks Version: 5.98.0
Qt Version: 5.15.6
Graphics Platform: Wayland
Comment 4 Bug Janitor Service 2022-09-23 13:09:00 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/discover/-/merge_requests/377
Comment 5 Aleix Pol 2022-09-28 16:37:46 UTC
Git commit 238f68a9357cf6fd05bbc82fd7199cf949230f67 by Aleix Pol.
Committed on 28/09/2022 at 16:10.
Pushed by apol into branch 'master'.

Provide the alternatives to an appstream id together with the URL

This way we can count on the symmetry and don't reach cases like in the
closed bug report where the flatpak id is not offered by the one coming
from packagekit but not vice-versa.

M  +16   -7    libdiscover/backends/FlatpakBackend/FlatpakBackend.cpp
M  +13   -1    libdiscover/backends/FlatpakBackend/FlatpakResource.cpp
M  +14   -0    libdiscover/backends/PackageKitBackend/AppPackageKitResource.cpp
M  +1    -0    libdiscover/backends/PackageKitBackend/AppPackageKitResource.h
M  +2    -0    libdiscover/resources/ResourcesProxyModel.cpp

https://invent.kde.org/plasma/discover/commit/238f68a9357cf6fd05bbc82fd7199cf949230f67
Comment 6 Aleix Pol 2022-09-28 16:38:19 UTC
Git commit 326501d6ff2587876b05e754c8e2a393dc94f76d by Aleix Pol Gonzalez, on behalf of Aleix Pol.
Committed on 28/09/2022 at 16:38.
Pushed by apol into branch 'Plasma/5.26'.

Provide the alternatives to an appstream id together with the URL

This way we can count on the symmetry and don't reach cases like in the
closed bug report where the flatpak id is not offered by the one coming
from packagekit but not vice-versa.


(cherry picked from commit 238f68a9357cf6fd05bbc82fd7199cf949230f67)

M  +16   -7    libdiscover/backends/FlatpakBackend/FlatpakBackend.cpp
M  +13   -1    libdiscover/backends/FlatpakBackend/FlatpakResource.cpp
M  +14   -0    libdiscover/backends/PackageKitBackend/AppPackageKitResource.cpp
M  +1    -0    libdiscover/backends/PackageKitBackend/AppPackageKitResource.h
M  +2    -0    libdiscover/resources/ResourcesProxyModel.cpp

https://invent.kde.org/plasma/discover/commit/326501d6ff2587876b05e754c8e2a393dc94f76d